      (Closes: #322506)
      - debian/control.in/libc: Remove libnss-files-udeb libnss-dns-udeb
        dependency.
      - debian/control: Update.

    * Enabale libnss upgrade guard again.
      (Closes: #321561, #321712, #321796, #322768)
      - debian/debhelper.in/libc.preinst: Change guard to 2.3.5-1.
      - debian/debhelper.in/libc.postinst: Likewise.

 -- GOTO Masanori <gotom@debian.org>  Sat,  6 Aug 2005 06:52:42 +0900

glibc (2.3.5-3) unstable; urgency=low

  * The "Keep Debconf5 speed" and the "Welcome back the recent glibc to
    unstable" release.
  * Glibc bumps up from 2.3.2.ds1 to 2.3.5 on etch.

  * GOTO Masanori <gotom@debian.org>

    * Localedata update:
      - debian/patches/cvs-localedata.dpatch: New file, to update localedata
        to the latest cvs.  Reported by Safir Secerovic <esafir@yahoo.com>,
        Reviewed by Denis Barbier <barbier@linuxfr.org>.  (Closes: #312902)
      - debian/patches/locale-iso4217.dpatch: New file, to fix localedef
        breakage for tr_TR.ISO-8859-9.  (Closes: #314855)

    * To make glibc-2.3.5 buidable with gcc-4.0:
      - debian/patches/00list: Drop glibc234-hppa-full-nptl-2004-12-20.dpatch
        line replaced by the new patches: glibc235-hppa-sysdeps.dpatch and
        glibc235-hppa-lt.dpatch.  It'll be removed when hppa unstable works
        nicely.
      - debian/patches/glibc235-gcc4-sparc-inline.dpatch: Update the patch
        to compile sparc64.
      - debian/patches/glibc235-gcc4-s390-inline.dpatch: New file, fix s390
        compilation breakage by changing static inline to auto inline for
        dl-machine.h.
      - debian/patches/glibc235-gcc4-alpha-profile.dpatch: New file, fix
        alpha compilation breakage by removing strong_alias.
      - debian/patches/glibc235-gcc4-hppa-profile.dpatch: New file, fix hppa
        compilation breakage by removing strong_alias.
      - debian/sysdeps/alpha.mk: Disabled __thread for static linked
        executables.