@@ -14,6 +14,9 @@ glibc (2.3.5-4) unstable; urgency=low
       - debian/debhelper.in/libc.preinst: Change guard to 2.3.5-1.
       - debian/debhelper.in/libc.postinst: Likewise.
 
+    * debian/sysdeps/hppa.mk: Use gcc-3.3 as the default compiler because
+      gcc-4.0 has serious bug, and gcc-3.4 cannot compile glibc.
+
  -- GOTO Masanori <gotom@debian.org>  Sat,  6 Aug 2005 06:52:42 +0900
 
 glibc (2.3.5-3) unstable; urgency=low
